Changed code structure.