@@ -15,16 +15,16 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
+@SuppressWarnings("PMD.LinguisticNaming")
 public class CommandHandler {
 
   private final List<ICommand> commands = new ArrayList<>();
-  private final Set<ICommandSender> senders = new HashSet<>();
   private final String callSymbol;
+  private final List<String> defaultInvokes = new ArrayList<>();
   private String separator = " ";
   private boolean ignoreBlanks = true;
 
@@ -32,65 +32,24 @@ public class CommandHandler {
     this.callSymbol = callSymbol;
   }
 
-  public CommandHandler(final String callSymbol, final String separator) {
-    this.callSymbol = callSymbol;
+  public CommandHandler addDefaultInvokes(final String... defaultInvokes) {
+    addDefaultInvokes(Arrays.asList(defaultInvokes));
+    return this;
+  }
+
+  public CommandHandler addDefaultInvokes(final Collection<String> defaultInvokes) {
+    this.defaultInvokes.addAll(defaultInvokes);
+    return this;
+  }
+
+  public CommandHandler setSeparator(final String separator) {
     this.separator = separator;
+    return this;
   }
 
-  public CommandHandler(final String callSymbol, final boolean ignoreBlanks) {
-    this.callSymbol = callSymbol;
+  public CommandHandler setIgnoreBlanks(final boolean ignoreBlanks) {
     this.ignoreBlanks = ignoreBlanks;
-  }
-
-  public CommandHandler(final String callSymbol, final String separator,
-                        final boolean ignoreBlanks) {
-    this.callSymbol = callSymbol;
-    this.separator = separator;
-    this.ignoreBlanks = ignoreBlanks;
-  }
-
-  /**
-   * Handles a {@link ICommand}.
-   *
-   * @param command The command to be handled.
-   * @param args    The arguments of the command.
-   * @param sender  The {@link ICommandSender} of the command.
-   *
-   * @return The {@link ICommandResult} of the handled command.
-   */
-  public ICommandResult handleCommand(final Optional<ICommand> command, final String[] args,
-                                      final ICommandSender sender) {
-    Optional<ICommandResult> commandResult = Optional.empty();
-    Optional<String> permission = Optional.empty();
-
-    if (command.isEmpty()) {
-      commandResult = Optional.of(new ICommandResult.ErrorCommandNotFound(args[0]));
-    } else {
-      try {
-        for (final Method method : command.get().getClass().getMethods()) {
-          if (ICommand.class.getMethod("handle", ICommandSender.class, String[].class)
-                  .equals(command.get().getClass()
-                          .getMethod("handle", ICommandSender.class, String[].class))) {
-            if (method.isAnnotationPresent(PermissionRequired.class)) {
-              permission = Optional.of(method.getAnnotation(PermissionRequired.class).permission());
-            }
-            break;
-          }
-        }
-      } catch (final NoSuchMethodException ignored) { }
-    }
-
-    if (permission.isPresent() && !sender.hasPermission(permission.get())) {
-      commandResult = Optional.of(new ICommandResult.ErrorPermission(permission.get()));
-    }
-
-    if (commandResult.isEmpty()) {
-      commandResult = Optional.of(command.orElseThrow().handle(sender, args));
-    }
-
-    AlphaEventCore.callEvent(new CommandCalledEvent(sender, args, commandResult.get()));
-
-    return commandResult.get();
+    return this;
   }
 
   /**
@@ -98,17 +57,19 @@ public class CommandHandler {
    *
    * @param message The message to be parsed and handled.
    * @param sender  The {@link ICommandSender} of the message.
-   *
    * @return The {@link ICommandResult} of the handled command.
    */
   public ICommandResult handle(final String message, final ICommandSender sender) {
-    if (message.startsWith(this.callSymbol)) {
-      return new ICommandResult.ErrorNoCommand(this.callSymbol);
+    if (!message.startsWith(this.callSymbol)) {
+      final ICommandResult commandResult = new ICommandResult.ErrorNoCommand(this.callSymbol);
+
+      AlphaEventCore.callEvent(new CommandCalledEvent(sender, this, new String[0], commandResult));
+
+      return commandResult;
     }
 
-    final List<String> args = splitMessage(message.substring(this.callSymbol.length()));
-
-    return handleCommand(getCommandMatchingInvokes(args), args.toArray(new String[0]), sender);
+    return handle(splitMessage(message.substring(this.callSymbol.length())).toArray(new String[0]),
+            sender);
   }
 
   /**
@@ -117,15 +78,78 @@ public class CommandHandler {
    *
    * @param args   The arguments to be handled.
    * @param sender The {@link ICommandSender} of the arguments.
-   *
    * @return The {@link ICommandResult} of the handled command.
    */
   public ICommandResult handle(final String[] args, final ICommandSender sender) {
-    return handleCommand(getCommandMatchingInvokes(Arrays.asList(args)), args, sender);
+    Optional<ICommandResult> commandResult = Optional.empty();
+    List<String> argList = List.of(args);
+
+    if (!invokesMatch(this.defaultInvokes.toArray(new String[0]), argList.toArray(new String[0]))) {
+      commandResult = Optional.of(new ICommandResult.ErrorNoInvokeMatch(
+              this.defaultInvokes.toArray(new String[0])));
+    }
+
+    if (commandResult.isEmpty()) {
+      argList = argList.subList(this.defaultInvokes.size(), argList.size());
+
+      final Optional<ICommand> command = getCommandMatchingInvokes(argList);
+
+      if (command.isPresent()) {
+        commandResult = Optional.ofNullable(handleCommand(command.get(),
+                (argList = argList.subList(command.get().getInvokes().length, argList.size()))
+                        .toArray(new String[0]), sender));
+      } else {
+        commandResult = Optional
+                .of(new ICommandResult.ErrorCommandNotFound(argList.toArray(new String[0])));
+      }
+    }
+
+    AlphaEventCore.callEvent(new CommandCalledEvent(sender, this, argList.toArray(new String[0]),
+            commandResult.get()));
+
+    return commandResult.isPresent() ? commandResult.get() : null;
   }
 
-  private Optional<ICommand> getCommandMatchingInvokes(final List<String> invokes) {
-    return this.commands.stream().filter(command -> invokesEqual(command.getInvokes(), invokes))
+  /**
+   * Handles a {@link ICommand}.
+   *
+   * @param command The command to be handled.
+   * @param args    The arguments of the command.
+   * @param sender  The {@link ICommandSender} of the command.
+   * @return The {@link ICommandResult} of the handled command.
+   */
+  public ICommandResult handleCommand(final ICommand command, final String[] args,
+          final ICommandSender sender) {
+    Optional<ICommandResult> commandResult = Optional.empty();
+    Optional<String> permission = Optional.empty();
+
+    try {
+      for (final Method method : command.getClass().getMethods()) {
+        if (ICommand.class.getMethod("handle", ICommandSender.class, String[].class)
+                .equals(command.getClass()
+                        .getMethod("handle", ICommandSender.class, String[].class))) {
+          if (method.isAnnotationPresent(PermissionRequired.class)) {
+            permission = Optional.of(method.getAnnotation(PermissionRequired.class).permission());
+          }
+          break;
+        }
+      }
+    } catch (final NoSuchMethodException ignored) { }
+
+    if (permission.isPresent() && !sender.hasPermission(permission.get())) {
+      commandResult = Optional.of(new ICommandResult.ErrorPermission(permission.get()));
+    }
+
+    if (commandResult.isEmpty()) {
+      commandResult = Optional.of(command.handle(sender, args));
+    }
+
+    return commandResult.get();
+  }
+
+  private Optional<ICommand> getCommandMatchingInvokes(final Collection<String> invokes) {
+    return this.commands.stream()
+            .filter(command -> invokesMatch(command.getInvokes(), invokes.toArray(new String[0])))
             .findFirst();
   }
 
@@ -134,7 +158,6 @@ public class CommandHandler {
    * Note: The first element contains all spaces in front for invoke matching purposes.
    *
    * @param message The message to be split.
-   *
    * @return The split message.
    */
   private List<String> splitMessage(final String message) {
@@ -152,16 +175,15 @@ public class CommandHandler {
    *
    * @param invokes The invokes of the command.
    * @param args    The arguments of the parsed message.
-   *
    * @return True, if the invokes are equal, false, if otherwise.
    */
-  private boolean invokesEqual(final String[] invokes, final List<String> args) {
-    if (invokes.length > args.size()) {
+  private boolean invokesMatch(final String[] invokes, final String[] args) {
+    if (invokes.length > args.length) {
       return false;
     }
 
     for (int i = 0; i < invokes.length; i++) {
-      if (!invokes[i].equals(args.get(i))) {
+      if (!invokes[i].equals(args[i])) {
         return false;
       }
     }
@@ -170,7 +192,8 @@ public class CommandHandler {
   }
 
   /**
-   * Gets the syntax of the command consisting of the call symbol, the invokes and the arguments.
+   * Gets the syntax of the command consisting of the call symbol, the default invokes, the
+   * invokes and the arguments of the {@link ICommand}.
    *
    * @return The syntax of the command.
    */
@@ -178,6 +201,14 @@ public class CommandHandler {
     final StringBuilder syntax = new StringBuilder(this.callSymbol);
     final String[] invokes = command.getInvokes();
     final String[] arguments = command.getArguments();
+
+    for (int i = 0; i < this.defaultInvokes.size(); i++) {
+      syntax.append(this.defaultInvokes.get(i));
+
+      if (i + 1 < this.defaultInvokes.size()) {
+        syntax.append(' ');
+      }
+    }
 
     for (int i = 0; i < invokes.length; i++) {
       syntax.append(invokes[i]);
@@ -210,18 +241,17 @@ public class CommandHandler {
     }
 
     this.commands.add(command);
-    this.commands
-            .sort(Comparator.comparingInt(cmd -> cmd.getInvokes().length));
+    this.commands.sort(Comparator.comparingInt(cmd -> cmd.getInvokes().length));
     Collections.reverse(this.commands);
   }
 
   /**
-   * Adds a {@link ICommandSender} to a {@link Set}.
+   * Adds {@link ICommandSender}s to a {@link Set}.
    *
-   * @param sender The sender to be added.
+   * @param sender The senders to be added.
    */
-  public void addSender(final ICommandSender sender) {
-    this.senders.add(sender);
+  public void addSender(final ICommandSender... sender) {
+    addSenders(Arrays.asList(sender));
   }
 
   /**
@@ -243,21 +273,21 @@ public class CommandHandler {
   }
 
   /**
-   * Gets a {@link Set} of {@link ICommandSender}s.
-   *
-   * @return A copy of a set containing command senders.
-   */
-  public Set<ICommandSender> getSenders() {
-    return Set.copyOf(this.senders);
-  }
-
-  /**
    * Gets the call symbol.
    *
    * @return The call symbol.
    */
   public String getCallSymbol() {
     return this.callSymbol;
+  }
+
+  /**
+   * Gets the default invokes.
+   *
+   * @return The default invokes.
+   */
+  public List<String> getDefaultInvokes() {
+    return this.defaultInvokes;
   }
 
   /**
@@ -270,29 +300,11 @@ public class CommandHandler {
   }
 
   /**
-   * Sets the separator.
-   *
-   * @param separator The separator to be set.
-   */
-  public void setSeparator(final String separator) {
-    this.separator = separator;
-  }
-
-  /**
    * Checks if blanks should be ignored.
    *
    * @return True, if blanks should be ignored, false, if otherwise.
    */
   public boolean isIgnoringBlanks() {
     return this.ignoreBlanks;
-  }
-
-  /**
-   * Sets if blanks should be ignored.
-   *
-   * @param ignoreBlanks True, if blanks should be ignored, false, if otherwise.
-   */
-  public void setIgnoreBlanks(final boolean ignoreBlanks) {
-    this.ignoreBlanks = ignoreBlanks;
   }
 }
